# ipc-mcp-server

./: .gitignore  README.md  main.py  ptz_control.py  pyproject.toml  requirements.txt  session_manager.py
src/mcp_server/: main.py  mock_ipc.py  ptz_control.py  session_manager.py
