[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "pyttsx3>=2.90",
    "mcp>=0.1.0",
    "fastapi-mcp"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
